# OOP-Piscine

./: .gitignore  README.md
module01/: README.md
module05/: CMakeLists.txt  Dockerfile  Makefile  a  docker-compose.yml  extract.sh  migrate_includes.sh  test  tester.sh
module05/assets/: assets.json  background_music.mp3:Zone.Identifier  events.json
module05/docs/: 00_Requirements_Analysis_Document.md  01_Design_Patterns_Mapping.md  02_UML_Diagrams.md  03_Physics_Design_Document.md  04_Architecture_Decision_Record.md  05_Implementation_Roadmap.md  05_Implementation_Roadmap_REALISTIC.md
module05/docs/uml/: Sequence_Diagram.md  State_Machine.md  class_diagram.md
module05/examples/: network_complex.txt  network_invalid_duplicate.txt  network_invalid_negative.txt  network_invalid_rail.txt  network_render.txt  network_simple.txt  trains_complex.txt  trains_invalid_fields.txt  trains_invalid_mass.txt  trains_invalid_time.txt  trains_render.txt  trains_simple.txt
module05/include/: Application.hpp
module05/include/analysis/: MonteCarloRunner.hpp  StatsCollector.hpp
module05/include/app/: HotReloadSupport.hpp  IRunModeHandler.hpp  ModeHandlers.hpp  RunSession.hpp
module05/include/core/: Graph.hpp  INetworkQuery.hpp  Node.hpp  Rail.hpp  Train.hpp
module05/include/event_system/: EventDispatcher.hpp  EventScheduler.hpp
module05/include/io/: CLI.hpp  ConsoleOutputWriter.hpp  FileOutputWriter.hpp  FileParser.hpp  ILogger.hpp  IOutputWriter.hpp  ISimulationOutput.hpp  OutputWriter.hpp  RailNetworkParser.hpp  TrainConfigParser.hpp
module05/include/patterns/commands/: CommandManager.hpp  ICommand.hpp  ReloadCommand.hpp  SimEventCommand.hpp  TrainAdvanceRailCommand.hpp  TrainDepartureCommand.hpp  TrainStateChangeCommand.hpp
module05/include/patterns/events/: Event.hpp  SignalFailureEvent.hpp  StationDelayEvent.hpp  TrackMaintenanceEvent.hpp  WeatherEvent.hpp
module05/include/patterns/factories/: EventFactory.hpp  TrainFactory.hpp  TrainValidator.hpp
module05/include/patterns/mediator/: TrafficController.hpp
module05/include/patterns/observers/: EventDispatcher.hpp  EventManager.hpp  EventScheduler.hpp  ObserverManager.hpp  RailEventAdapter.hpp  TrainEventAdapter.hpp
module05/include/patterns/states/: AcceleratingState.hpp  BrakingState.hpp  CruisingState.hpp  EmergencyState.hpp  ITrainState.hpp  IdleState.hpp  StateRegistry.hpp  StoppedState.hpp  WaitingState.hpp
module05/include/rendering/: EventRenderer.hpp  GraphLayoutEngine.hpp  HudRenderer.hpp  IRenderer.hpp  InputManager.hpp  NodeRenderer.hpp  RailRenderer.hpp  RenderManager.hpp  RenderTypes.hpp  SFMLRenderer.hpp  TrainPositionInterpolator.hpp  TrainRenderer.hpp  WorldRenderer.hpp
module05/include/simulation/: CollisionAvoidance.hpp  EventPipeline.hpp  IEventScheduler.hpp  IPhysicsQueries.hpp  IReplayTarget.hpp  IStopTimerStore.hpp  MovementSystem.hpp  PhysicsConstants.hpp  PhysicsSystem.hpp  SafetyConstants.hpp  SimConstants.hpp  SimulationBuilder.hpp  SimulationConfig.hpp  SimulationContext.hpp  SimulationManager.hpp  SimulationReporting.hpp  TrainLifecycleService.hpp
module05/include/utils/: ConsoleColors.hpp  FileSystemUtils.hpp  FileWatcher.hpp  IRng.hpp  IsometricUtils.hpp  SeededRNG.hpp  StringUtils.hpp  Time.hpp
module05/include/world/: World.hpp  WorldGenerator.hpp
module05/src/: Application.cpp  main.cpp
module05/src/analysis/: MonteCarloRunner.cpp  StatsCollector.cpp
module05/src/app/: HotReloadSupport.cpp  ModeHandlers.cpp  RunSession.cpp
module05/src/core/: Graph.cpp  Node.cpp  Rail.cpp  Train.cpp
module05/src/event_system/: EventPipeline.cpp  EventScheduler.cpp
module05/src/events/: Event.cpp  SignalFailureEvent.cpp  StationDelayEvent.cpp  TrackMaintenanceEvent.cpp  WeatherEvent.cpp
module05/src/io/: CLI.cpp  ConsoleOutputWriter.cpp  FileOutputWriter.cpp  FileParser.cpp  OutputWriter.cpp  RailNetworkParser.cpp  TrainConfigParser.cpp
module05/src/rendering/: CameraManager.cpp  EventRenderer.cpp  GraphLayoutEngine.cpp  HudRenderer.cpp  InputManager.cpp  NodeRenderer.cpp  RailRenderer.cpp  RenderManager.cpp  SFMLRenderer.cpp  SpriteAtlas.cpp  TrainPositionInterpolator.cpp  TrainRenderer.cpp  WorldRenderer.cpp
module05/src/simulation/: CollisionAvoidance.cpp  EventPipeline.cpp  EventScheduler.cpp  MovementSystem.cpp  NetworkServicesFactory.cpp  OccupancyMap.cpp  PhysicsSystem.cpp  SimulationBuilder.cpp  SimulationContext.cpp  SimulationManager.cpp  SimulationReporting.cpp  TrainLifecycleService.cpp
module05/src/utils/: FileSystemUtils.cpp  FileWatcher.cpp  SeededRNG.cpp  Time.cpp  TrainValidator.cpp
module05/src/world/: World.cpp  WorldGenerator.cpp
module05/tests/integration/: test_hot_reload_support_integration.cpp  test_multi_train.cpp  test_parser_to_train_pipeline.cpp  test_simulation_builder_validation.cpp  test_single_train_journey.cpp
module05/tests/unit/: test_event_factory.cpp  test_event_scheduler_dispatcher.cpp  test_events.cpp  test_graph.cpp  test_hot_reload_support.cpp  test_node.cpp  test_occupancy_map.cpp  test_pathfinding.cpp  test_physics_system.cpp  test_rail.cpp  test_rail_network_parser.cpp  test_run_session.cpp  test_time.cpp  test_train.cpp  test_train_config_parser.cpp  test_train_factory.cpp  test_train_states.cpp
(+309 files in other folders)
